# Quotes_django

./: .gitignore  README.md  pyproject.toml
site_quotes/: manage.py
site_quotes/quotes/: form.py  models.py  urls.py  views.py
site_quotes/quotes/migrations/: 0001_initial.py  0002_rename_birth_date_author_born_date_and_more.py  0003_tag_popularity.py
site_quotes/quotes/templates/quotes/: author.html  index.html  new_author.html  new_quote.html
site_quotes/site_quotes/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
site_quotes/site_quotes/static/site_quotes/: main.css
site_quotes/site_quotes/templates/site_quotes/: base.html
site_quotes/users/: urls.py  views.py
site_quotes/users/templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
site_quotes/utils/: config.py  migration.py
