[tool.poetry]
name = "quotes-django"
version = "0.1.0"
description = ""
authors = ["SergiyBagmet <134723713+SergiyBagmet@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.7"
psycopg2 = "^2.9.9"
pymongo = "^4.6.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
